WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263764
[Cocoa] Inserting empty text using system text input interfaces does not delete the current selection
https://bugs.webkit.org/show_bug.cgi?id=263764
Summary
[Cocoa] Inserting empty text using system text input interfaces does not dele...
Aditya Keerthi
Reported
2023-10-26 23:36:58 PDT
rdar://106570343
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2023-10-26 23:50:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19626
EWS
Comment 2
2023-10-27 10:28:11 PDT
Committed
269858@main
(75df801c3722): <
https://commits.webkit.org/269858@main
> Reviewed commits have been landed. Closing PR #19626 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug