[Cocoa] Inserting empty text using system text input interfaces does not delete the current selection https://bugs.webkit.org/show_bug.cgi?id=263764 rdar://106570343

Reviewed by Wenson Hsieh.

Passing in an empty string to `-[NSResponder insertText:]` and
`-[UITextInput insertText:]` while there is a ranged selection should
perform backwards deletion, matching other system text engines.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::insertTextAsync):

`Editor::insertTextWithoutSendingTextEvent` early returns when empty text is
passed in. In order to avoid affecting other codepaths, implement the logic in
`WebPage::insertTextAsync`, which a common entry point for system text input
insertion across Cocoa platforms.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewTextInput.mm:
(insertText):
(TEST):

Canonical link: https://commits.webkit.org/269858@main